[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robovac"
version = "1.3.1"
description = "Eufy RoboVac integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.13.0"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dan Webb", email = "dan.webb@damacus.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Ignore errors about missing stubs for external libraries
[[tool.mypy.overrides]]
module = [
    "voluptuous.*",
    "homeassistant.*",
    "numpy.*"
]
ignore_missing_imports = true

# Disable override check for config_flow.py
[[tool.mypy.overrides]]
module = "custom_components.robovac.config_flow"
disallow_subclassing_any = false
disable_error_code = ["override"]
strict_optional = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["custom_components"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
